--- a/daniel.css
+++ b/daniel.css
@@ -81,8 +81,13 @@ pre.quote {
 div.topmenu {
     background-color: #f0f0ff;
     color: #000000;
-    font-size: 150%;
+    font-size: 130%;
     text-align: center;
+}
+
+a.topmenu {
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 div.main {
